--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Marwan Zayed | Front End Developer</title>
+    <title>Marwan's Portfolio</title>
     <meta name="description"
       content="Hire Professional Freelancer &amp; React Developer. Building animations and interactive experiences, hi-end solutions, website maintenance &amp; security" />
     <meta name="robots" content="noodp" />
